New folders: Backend: model: chatmessages,friend requests Backend: routes: chat, friends Fromtend: src: #code citations.md(eta gitignore e), chat card, friend req card Edit motamoti shob folder e korsilam

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 project/cashcompass/backend/.env
 project/cashcompass/backend/node_modules/
 project/cashcompass/frontend/node_modules/
+project/cashcompass/frontend/src/# Code Citations.md
