--- a/project/cashcompass/backend/package.json
+++ b/project/cashcompass/backend/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
@@ -21,7 +22,8 @@
     "marked": "^16.1.1",
     "mongoose": "^8.16.4",
     "node-fetch": "^3.3.2",
-    "node-fethc": "^0.0.1-security"
+    "node-fethc": "^0.0.1-security",
+    "react-chartjs-2": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
