--- a/project/cashcompass/frontend/package.json
+++ b/project/cashcompass/frontend/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.5.0",
     "marked": "^16.1.1",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
