--- a/project/cashcompass/frontend/public/manifest.json
+++ b/project/cashcompass/frontend/public/manifest.json
@@ -11,6 +11,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#6dd5fa",
+  "background_color": "#3498db"
 }
