--- a/project/cashcompass/frontend/package.json
+++ b/project/cashcompass/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "marked": "^16.1.1",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
